[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Ahiiia92"]
description = "A simple implementation of grep in Rust. A tool to search files"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Ahiiia92/grrs"
repository = "https://github.com/Ahiiia92/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
proc-macro2 = "1.0.84"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
